# ai-invention-033e16-argument-adjunct-asymmetry-in-spoken-reg

./: README.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
prompts/: README.md
prompts/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
prompts/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
prompts/3_report_results/: 3_gen_full_paper.md
prompts/3_report_results/1_gen_viz/: gen_viz_1.md  gen_viz_2.md  gen_viz_3.md
prompts/3_report_results/2_gen_demo_art/: gen_demo_art_dataset_1.md  gen_demo_art_dataset_2.md  gen_demo_art_evaluation_1.md  gen_demo_art_evaluation_2.md  gen_demo_art_experiment_1.md  gen_demo_art_experiment_2.md
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  data.py  dataset_metadata.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/evaluation-1/: README.md
round-1/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-1/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: method_code_demo.ipynb
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-2/dataset-1/src/: .terminal_claude_agent_struct_out.json  analyze.py  audit_report.txt  data.py  data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  build_eval_out.py  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  (+2 more)
round-2/experiment-1/: README.md
(+21 files in other folders)
