[project]
name = "ud-dependency-distance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiohappyeyeballs==2.6.2",
  "aiohttp==3.14.1",
  "aiosignal==1.4.0",
  "anyio==4.14.0",
  "attrs==26.1.0",
  "certifi==2026.6.17",
  "charset-normalizer==3.4.7",
  "click==8.4.1",
  "contourpy==1.3.3",
  "cycler==0.12.1",
  "datasets==5.0.0",
  "dill==0.4.1",
  "filelock==3.29.4",
  "fonttools==4.63.0",
  "frozenlist==1.8.0",
  "fsspec==2026.4.0",
  "huggingface-hub==1.20.1",
  "idna==3.18",
  "kiwisolver==1.5.0",
  "loguru==0.7.3",
  "matplotlib==3.11.0",
  "multidict==6.7.1",
  "multiprocess==0.70.19",
  "numpy==2.5.0",
  "packaging==26.2",
  "pandas==3.0.3",
  "patsy==1.0.2",
  "pillow==12.2.0",
  "propcache==0.5.2",
  "pyarrow==24.0.0",
  "pyparsing==3.3.2",
  "python-dateutil==2.9.0.post0",
  "pyyaml==6.0.3",
  "requests==2.34.2",
  "scipy==1.18.0",
  "six==1.17.0",
  "statsmodels==0.14.6",
  "tqdm==4.68.3",
  "typing-extensions==4.15.0",
  "urllib3==2.7.0",
  "xxhash==3.7.0",
  "yarl==1.24.2",
]
